Fixed Notice:  Undefined variable: db_logging in defence_vs_defence.php
Fixed Notice:  Object of class ADORecordSet_mysqlt could not be converted to int in defence_vs_defence.php
Fixed Notice:  Undefined variable: db_logging in defence_vs_defence.php
Fixed Notice:  Object of class ADORecordSet_mysqlt could not be converted to int in kick_off_planet.php

TheMightyDude (20 July 2012)
--------------------------------------
Fixed Notice:  Use of undefined constant quantity - assumed 'quantity' and energy_available - assumed 'energy_available' in sched_degrade.php
Fixed Notice:  Use of undefined constant ship_id - assumed 'ship_id' in sched_degrade.php
Fixed Notice:  Undefined variable: name in mailto2.php
Fixed Notice:  Use of undefined constant ship_id - assumed 'ship_id' in mailto2.php
Fixed Notice:  Undefined variable: l_lssd in port2.php
Fixed Notice:  Undefined variable: db_logging in lrscan.php also cleanup.
Fixed some more issues in traderoute (SIGH)
Fixed Notice:  Use of undefined constant dest_id - assumed 'dest_id' and undefined constant name - assumed 'name' in main.php
Fixed Parse error:  syntax error, unexpected T_VARIABLE in planet_report_ce.php
Fixed Notice:  Undefined variable: db_logging in planet_report_ce.php
Fixed Notice:  Use of undefined constant corp - assumed 'corp' in planet_report.php
Fixed Genesis bug that wouldn't allow you to create more than 1 planet in the same sector.
Fixed exploit where a player could scan or attack a ssip without clicking on them first, multi refresh scan exploit.
Cleaned up rsmove.php
Fixed Notice:  Undefined variable: editroute in traderoute.php
Fixed Notice:  Undefined variable: title in header.php (intermittent)
Fixed Notice:  Undefined variable: targetship, l_by_fedbounty2, l_aboard, l_att_andused in attack.php
Fixed Notice:  Undefined variable: langsh, l_killheadline, l_news_killed in db_kill_player.php
Fixed readmail.php was displaying \' instead of just ' (single quote)